--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 .hero{
     height: 100vh;
     width: 100%;
-    background-image: url(img/sky.jpg);
+    background-image: url(../img/sky.jpg);
     background-size: cover;
     background-position: center;
     position: relative;
@@ -15,7 +15,7 @@
     height: 200px;
     width: 500%;
     display: block;
-    background-image: url(img/road.jpg) ;
+    background-image: url(../img/road.jpg) ;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -32,7 +32,7 @@
 .city{
     height: 250px;
     width: 500%;
-    background-image: url(img/city.png);
+    background-image: url(../img/city.png);
     position: absolute;
     bottom: 200px;
     left: 0;
